web-infras/parser/tests/fixtures/babel/es2015/arrow-functions/inner-parens-object-pattern/output.txt
[SyntaxError]: Invalid parenthesized assignment pattern. (1,2)
1|({ a: (foo) } = {}) => {}
 |^
